...
            tools:src="@drawable/broken_image" />


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/song_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/title_size"
...
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/image_container"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/image_container" />

    <ImageView
        android:id="@+id/play_pause_button"
        android:layout_width="@dimen/play_pause_button_size"
        android:layout_height="@dimen/play_pause_button_size"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
...
