<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.marcobarragan.thoughtmusic.main.MainActivity"
    android:id="@+id/categories_view_pager">

        <android.support.v4.view.PagerTabStrip
            android:id="@+id/categories_title_strip"
            style="@style/viewPagerStripStyle">

        </android.support.v4.view.PagerTabStrip>

</android.support.v4.view.ViewPager>
